--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-574-mexant
                               </ul>
                           </li>
                           <li class="scroll-to-section"><a href="#testimonials">Testimoni</a></li>
-                          <li><a href="../lp/login.html">Login</a></li> 
+                          <li><a href="login.html">Login</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
